--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 lang: es-AR
 google_analytics: UA-162778733-1
-title: Matemática 1 (1013) EyA
+title: Matemática 1 (1013) EyA - Com. 12 - 2020 cuat. 1
 plugins:
   - jemoji
